[package]
name = "interiris"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
env_logger = "0.10.0"
futures = "0.3.27"
gumdrop = "0.8.1"
log = "0.4.17"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.0"
netdiag = "0.3.0"

[dependencies.tokio]
version     = "1.26.0"
features    = ["full"]
